// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`archive-with-no-selected 1`] = `
<div
  class="archive"
>
  <div
    class="leftPanel"
  >
    <div
      class="archiveInfo"
    >
      <ufo-rocks_resource-icon
        cls="archiveIcon"
        ext="7z"
        mediatype="archive"
        size="m"
      />
      <div
        class="archiveInfoText"
      >
        <div
          class="title"
        >
          archive-1.7z
        </div>
        <div
          class="infoLine"
        >
          <span>
            Размер:
          </span>
           
          <span>
            98 КБ
          </span>
        </div>
        <div
          class="infoLine"
        >
          <span>
            Объектов:
          </span>
           
          <span>
            5
          </span>
        </div>
      </div>
    </div>
    <div
      class="listing"
    >
      <div
        class="listingItem"
      >
        <span>
          Пустая папка
        </span>
      </div>
    </div>
  </div>
  <div
    class="preview"
  >
    <div
      class="tip"
    >
      <span>
        Теперь можно просматривать
и извлекать отдельные файлы из архива
      </span>
    </div>
  </div>
</div>
`;

exports[`archive-with-selected 1`] = `
<div
  class="archive hasSelected"
>
  <div
    class="leftPanel"
  >
    <div
      class="archiveInfo"
    >
      <ufo-rocks_resource-icon
        cls="archiveIcon"
        ext="rar"
        mediatype="archive"
        size="m"
      />
      <div
        class="archiveInfoText"
      >
        <div
          class="title"
        >
          archive-2.rar
        </div>
        <div
          class="infoLine"
        >
          <span>
            Размер:
          </span>
           
          <span>
            1023 байт
          </span>
        </div>
        <div
          class="infoLine"
        >
          <span>
            Объектов:
          </span>
           
          <span>
            23
          </span>
        </div>
      </div>
    </div>
    <div
      class="listing"
    >
      <div
        class="listingItem"
      >
        <span>
          Пустая папка
        </span>
      </div>
    </div>
  </div>
  <div
    class="preview"
  >
    <div
      class="noPreview"
    >
      <div
        class="embedActions"
      >
        <lego-components_button
          classname="backButton"
          iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
          onclick="function () { [native code] }"
          size="m"
          view="clear"
        >
          <span>
            Назад
          </span>
        </lego-components_button>
      </div>
      <div
        class="noPreviewCentered"
      >
        <ufo-rocks_resource-icon
          cls="previewIcon"
          ext="ext"
          size="xl"
        />
        <div
          class="noPreviewFileName"
        >
          selected-file-name.ext
        </div>
      </div>
    </div>
  </div>
</div>
`;
